add "duplicate-entry" class to 'Base.css' and simplify the "duplicate check"
Signed-off-by: AbdAlRahmanGad <abdobngad@gmail.com>